fix: Replace generic exception handling with custom TokenFetchException
- Create TokenFetchException for better error context
- Replace generic Exception with specific exception handling in TokenRepository
- Update benchmark classes to handle TokenFetchException
- Convert ValidationResponse class to Java record for cleaner code
- Fix compilation errors and improve exception specificity

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>